--- a/html/bang5mai.html
+++ b/html/bang5mai.html
@@ -209,7 +209,7 @@
 					<img src="../img/1(1).jpg" alt="" style="float: left;">
 					<img src="../img/2.jpg" alt="" style="float: left;">
 					<img src="../img/3(1).png" alt="" style="float: left;">
-					<img src="../img/qqq.png" alt="" style="float: left;">
+					<a href="https://gaoruixue1215.github.io/web2/html/xiangqingye.html"><img src="../img/qqq.png" alt="" style="float: left;"></a>
 				</div>
 			</div>
 			<!-- 轮播图右 -->
